Restored mp3s are being sent

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="vid-container">
             <video loop>
-                <source src="./video/rain.mp4" type="video/mp4">
+                <source src="./video/rain.mp4" type="video/mp4" autoplay>
             </video>
         </div>
 
