Making video full width

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="app">
 
         <div class="vid-container">
-            <video loop>
-                <source src="./video/rain.mp4" type="video/mp4" autoplay>
-            </video>
+           
+                <video class="video-file" src="./video/rain.mp4" type="video/mp4" autoplay loop></video>
+          
         </div>
 
         <div class="time-select">
