Media queries are set

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="vid-container">
            
-                <video class="video-file" src="./video/rain.mp4" type="video/mp4" autoplay loop></video>
+                <video class="video-file" src="./video/rain.mp4" type="video/mp4" autoplay muted></video>
           
         </div>
 
